--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ https://cdn.jsdelivr.net/npm/izimodal-1.6.0@1.6.1/css/iziModal.min.css
 
 <body>
 	<div class="container">
+		
 		<div id="modal-welcome"></div>
-
+	
 
 		<div class="logo""><a href=" index.html"><img src="img/100logo.png" alt="Çok Amaçlı Zıpçıktı by YAGIZ"
 				style="display: inline-block; user-select: none;"></a></div>
@@ -132,13 +133,13 @@ https://cdn.jsdelivr.net/npm/izimodal-1.6.0@1.6.1/css/iziModal.min.css
 			<a href="http://hbys.kocaelish.com" target="_blank">
 				<button type="button" class="btn btn-outline-primary">HBYS</button>
 			</a>
-			<a href="http://keyvanter.kocaelish.com" target="_blank">
-				<button type="button" class="btn btn-outline-secondary">KEYvanter</button>
+			<a href="keyosmgt.kocaelish.com" target="_blank">
+				<button type="button" class="btn btn-outline-secondary">KeyOSMGT</button>
 			</a>
 			<a href="http://speedtest.kocaelish.com:3000" target="_blank">
-				<button type="button" class="btn btn-outline-info">SpeedtestKSH</button>
+				<button type="button" class="btn btn-outline-info">Speedtest</button>
 			</a>
-			<a href="img/nobet/aralik.jpg" target="_blank">
+			<a href="img/nobet/ocak.jpg" target="_blank">
 				<button type="button" class="btn btn-outline-dark">NÖBET</button>
 			</a>
 		</div>
@@ -158,7 +159,7 @@ https://cdn.jsdelivr.net/npm/izimodal-1.6.0@1.6.1/css/iziModal.min.css
 			<a href="https://lms.kocaelish.com/Login" target="_blank" title="Eğitim Portalı">
 				<button type="button" class="btn btn-outline-warning">LMS</button>
 			</a>
-			<a href="img/wifi.zip" target="_blank">
+			<a href="img/wifi-cert.zip" target="_blank">
 				<button type="button" class="btn btn-outline-primary" title="wifi.zip indirir">WIFI</button>
 			</a>
 			<a href="https://kocaelisehir.saglik.gov.tr/TR-942708/yemek-listesi.html" target="_blank">
