--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<a href="http://hbys.kocaelish.com" target="_blank">
 				<button type="button" class="btn btn-outline-primary">HBYS</button>
 			</a>
-			<a href="keyosmgt.kocaelish.com" target="_blank">
+			<a href="http://keyosmgt.kocaelish.com" target="_blank">
 				<button type="button" class="btn btn-outline-secondary">KeyOSMGT</button>
 			</a>
 			<a href="http://speedtest.kocaelish.com:3000" target="_blank">
