--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<div id="modal-alert2" data-izimodal-group="alerts"></div>
 		<footer>
 			<div id="copyright" align="center" class="copyright">
-				çok amaçlı zıpçıktı v1.9.1 &copy; 2023 <a href="https://bit.ly/emreyagiz" target="_blank" title="Emre YAĞIZ">YAGIZ</a> - All Rights Reserved, BEDSoftware
+				çok amaçlı zıpçıktı v1.9.1 &copy; 2023 <a href="https://mryagiz.github.io/ben/" target="_blank" title="Emre YAĞIZ">YAGIZ</a> - All Rights Reserved, BEDSoftware
 				</br>    <b>Ey Türk gençliği! Birinci vazifen; Türk istiklalini, Türk cumhuriyetini, ilelebet muhafaza ve müdafaa etmektir.</b>
 
 			</div>
